Update KeycloakStrategy.java
NCPEAS-435:
- sonar-issues & bamboo-build fixed